# adhd-side-effect-rag

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  environment.yml  pyproject.toml
docker/: nginx.conf  supervisord.conf
scripts/: deploy_hf_space.py
src/side_effect/: embedding_and_keywords.py
src/side_effect/rag/: __init__.py  api.py  cli.py  documents.py  indexer.py  providers.py  retriever.py  schemas.py  service.py
tests/: test_rag.py  test_retriever.py
website/: next.config.js  package.json  pnpm-lock.yaml
website/components/: BarList.js  Layout.js  MedicalDisclaimer.js  MedicationCard.js  RagAssistant.js
website/lib/: data.js
website/pages/: _document.js  about.js  explore.js  find_medicine.js  index.js  methodology.js
website/pages/api/: rag.js
website/pages/medicine/: [drug].js  index.js
website/public/data/: drugSideEffectsData.json  reviews.json
website/styles/: globals.css
